# SubspaceAD-ONNX

./: .gitignore  README.md  dinov3_onnx.py  inference.ipynb  pyproject.toml  subspacead_onnx.py
datasets/: .gitignore
models/: .gitignore
outputs/: adaptive_hybrid_v6_224.csv  dual_branch_vitsplus_224.csv  insid3_auto_v8_224_float32.csv  shared_ppca_mixture_v7_224.csv  subspacead_multiband_v5_224.csv
subspaceadonnx/: __init__.py
subspaceadonnx/core/: dinov3_onnx.py  subspacead.py
subspaceadonnx/tools/: export_dinov3_middle_onnx.py  export_onnx.py  mvtec_evaluation.py  visualization.py
tests/: test_export_onnx.py  test_fit_directory.py  test_input_color.py  test_mvtec_evaluation.py  test_pca_persistence.py  test_providers.py  test_scoring.py  test_visualization.py
